# bdh

./: .gitignore  CODE_REVIEW.md  DATASETS.md  MATHEMATICAL_PROOFS.md  Makefile  TRAINING.md  hatching.py  hatching_advanced.py  hatching_fixes.py  launch_training.py  pyproject.toml  requirements.txt  train_hatching.py
agents/: subagent_adversarial_verifier.md  subagent_bead_executor.md
configs/: default.yaml
core/: agent-map.md  bd.md  bead-contract.md  claude.md  degradation.md  dod.md  enforcement.md  escalation.md  evidence.md  gt-sling.md  risk.md  startup-index.md
docs/: ARCHITECTURE.md  VISUAL_GUIDE.md
overlays/: best-practices.md  language-index.md  repo-conventions.md  testing.md
overlays/languages/: python.md
policies/: api-surface-policy.md  cache-keys.md  change-classifier.md  checkpoint.md  checks-and-versions.md  dep-change-policy.md  diff-scope.md  process-policy.md  retry.md  reviewer-router.md  suggestion-log.md
tests/: __init__.py  test_math_proofs.py  test_mathematical_invariants.py
training/: __init__.py  data_generators.py  datasets.py  evaluation.py  live_monitor.py  long_run_trainer.py  monitor.py  run_training.py  train_multitask.py  visualize.py
