[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdh"
version = "0.1.0"
description = "Baby Dragon Hatchling - Biologically-inspired neural network architecture"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Pathway Technology, Inc."}
]
keywords = ["deep-learning", "neural-networks", "spiking-networks", "transformers", "neuroscience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
training = [
    "tensorboard>=2.12.0",
    "wandb>=0.15.0",
    "datasets>=2.12.0",
    "tokenizers>=0.13.0",
]
visualization = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
]
dev = [
    "pytest>=7.3.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
all = [
    "bdh[training,visualization,dev]",
]

[project.scripts]
bdh-train = "training.run_training:main"
bdh-monitor = "training.monitor:main"
bdh-visualize = "training.visualize:main"

[project.urls]
Homepage = "https://github.com/psikosen/bdh"
Documentation = "https://github.com/psikosen/bdh#readme"
Repository = "https://github.com/psikosen/bdh"

[tool.setuptools.packages.find]
where = ["."]
include = ["bdh*", "training*", "tests*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
